--- a/TestServer/appsettings.json
+++ b/TestServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "&E)H@McQfTjWnZq4t7w!z%C*F-JaNdRgUkXp2s5u8x/A?D(G+KbPeShVmYq3t6w9"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
