--- a/TestServer/appsettings.json
+++ b/TestServer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Token": "&E)H@McQfTjWnZq4t7w!z%C*F-JaNdRgUkXp2s5u8x/A?D(G+KbPeShVmYq3t6w9"
+    "Token": "MySecretKeyToTest"
   },
   "Logging": {
     "LogLevel": {
