Controllers for various methods added.

--- a/TestServer/appsettings.json
+++ b/TestServer/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost; port=3306; database=timetable; user=dip; password=password; Persist Security Info=False; Connect Timeout=300"
+  }
 }
