--- a/flutter_front_end/pubspec.yaml
+++ b/flutter_front_end/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.4.1
+  localstorage: ^4.0.0+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,7 +48,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  google_fonts: ^3.0.1
+  google_fonts: ^2.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
