--- a/flutter_front_end/pubspec.yaml
+++ b/flutter_front_end/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.4.1
   localstorage: ^4.0.0+1
-
+  path_provider: ^2.0.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
