--- a/flutter_front_end/pubspec.yaml
+++ b/flutter_front_end/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_sign_in: ^5.4.1
   localstorage: ^4.0.0+1
   path_provider: ^2.0.11
+  cell_calendar: ^0.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
