--- a/flutter_front_end/pubspec.yaml
+++ b/flutter_front_end/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.4.1
-  localstorage: ^4.0.0+1
+  #localstorage: ^4.0.0+1
   path_provider: ^2.0.11
   cell_calendar: ^0.7.0
 dev_dependencies:
