--- a/TestServer/appsettings.json
+++ b/TestServer/appsettings.json
@@ -10,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost; port=3306; database=timetable; user=dip; password=password; Persist Security Info=False; Connect Timeout=300"
+    "DefaultConnection": "server=localhost; port=3306; database=timetable2; user=dip; password=password; Persist Security Info=False; Connect Timeout=300"
   }
 }
