--- a/TestServer/appsettings.json
+++ b/TestServer/appsettings.json
@@ -11,5 +11,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost; port=3306; database=timetable2; user=dip; password=password; Persist Security Info=False; Connect Timeout=300"
-  }
+  },
+  "APIKey": "AIzaSyB8MCVKFHWdUMAFCmnavND0jOZ-Fyl8kQk"
 }
