--- a/flutter_front_end/pubspec.yaml
+++ b/flutter_front_end/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   #localstorage: ^4.0.0+1
   path_provider: ^2.0.11
   cell_calendar: ^0.7.0
+  file_picker: ^5.2.9
+  url_launcher: ^6.1.10
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
